<?xml version="1.0"?>
<package format="2">
  <name>drone_localisation</name>
  <version>0.0.0</version>
  <description>drone localisation package based off of Octomap</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sebastianschroder@hotmail.com">dml</maintainer>
  <license>TBD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>tf</depend>
  <depend>message_filters</depend>
  <depend>octomap_ros</depend>
  <depend>octomap</depend>
  <depend>dynamic_edt_3d</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>nodelet</depend>

  


  <!-- The export tag contains other, unspecified, tags -->
  <!-- <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export> -->
</package>
